[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/Interface/StartScreen/Lobby.gd" type="Script" id=1]

[node name="Lobby" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="LeftPadding" type="ColorRect" parent="."]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
color = Color( 1, 1, 1, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 24.0
margin_right = 776.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 752.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 752.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 752.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
color = Color( 1, 1, 1, 0 )

[node name="ServerName" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 752.0
margin_bottom = 38.0
text = "ServerÂ´s name"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 752.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer"]
margin_right = 752.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Players" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 752.0
margin_bottom = 534.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 580.0
margin_right = 752.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="StartGame" type="Button" parent="VBoxContainer/HBoxContainer"]
visible = false
margin_right = 83.0
margin_bottom = 20.0
text = "Start Game"

[node name="Back" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 668.0
margin_right = 752.0
margin_bottom = 20.0
size_flags_horizontal = 10
text = "Disconnect"

[node name="BottomPadding" type="ColorRect" parent="VBoxContainer"]
visible = false
margin_top = 590.0
margin_right = 752.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 10 )
color = Color( 1, 1, 1, 0 )

[node name="RightPadding" type="ColorRect" parent="."]
margin_left = 780.0
margin_right = 800.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
color = Color( 1, 1, 1, 0 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Back" to="." method="_on_Back_pressed"]
